@@ -3,9 +3,12 @@ from automate.extensions.arduino import ArduinoAnalogSensor, ArduinoDigitalSenso
     ArduinoServoActuator, ArduinoDigitalActuator, ArduinoService
 from automate.program import Program
 
+def multiply(value):
+    return 2*value
 
 class ArduinoSystem(System):
     # Control servo with analog port a1 through interpolating sensor interp
+    u = UserFloatSensor(status_filter=multiply)
     a1 = ArduinoAnalogSensor(service=0, pin=0)
     d12 = ArduinoDigitalSensor(service=0, pin=12, pull_up_resistor=True, inverted=True)
 
@@ -25,6 +28,7 @@ s = ArduinoSystem(services=[ArduinoService(
     device_type="arduino",
     sample_rate=500,
 ),
+    WebService(),
     TextUIService(),
 ],
 )
